# turtle-curve

./: README.md  requirements.txt  setup.cfg
src/cli/: curve.py
src/turtle_curve/: generator.py  turtle_walk.py
tests/: test_generators.py
