[metadata]
name = turtle curve
version = 0.0.1
license = "GNU General Public License v3.0"
description = Draw beautiful curves based on numbers with the turtle module
long_description = file: README.md
author = Simon Paulsson

[options]
packages = find:
package_dir =
    =src
include_package_data = True
# install_requires = 

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    curve = cli.curve:main